--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: 'GeistMono';
+  src: url('/fonts/GeistMonoVF.woff2') format('woff2'),
+    url('/fonts/GeistMonoVF.woff') format('woff');
+  font-weight: 100 900;
+  font-display: swap;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+a:focus {
+  border: none;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Inter', sans-serif;
+  background-color: theme('colors.primary');
+  color: theme('colors.light');
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+/* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 2px;
+  /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #1F2937;
+  /* Dark background color for the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(90deg, #34D399, #06b6d4);
+  /* Gradient for the thumb */
+  border-radius: 9999px;
+  /* Make the scrollbar thumb rounded */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(90deg, #06b6d4, #3b82f6);
+  /* Thumb color on hover */
+}
+
+@keyframes gradient-border {
+  0% {
+    border-color: #06b6d4;
   }
+
+  50% {
+    border-color: #3b82f6;
+  }
+
+  100% {
+    border-color: #06b6d4;
+  }
+}
+
+.animate-gradient-border {
+  border: 2px solid;
+  border-image: linear-gradient(90deg, #06b6d4, #3b82f6, #06b6d4);
+  border-image-slice: 1;
+  animation: gradient-border 3s infinite linear;
 }
